--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>My Love ❤️</title>
+  <title>Mi corazon ❤️</title>
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Dancing+Script|Parisienne|Sacramento|Allura|Satisfy|Tangerine" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
 <body>
 <div class='wrapper'>
   
-  <div class='text'> I Love You ❤️ </div>
+  <div class='text'> te amo mi vida, te amo a mas no poder cariño mio, te amó ❤️ </div>
   
   <div class="gif-container">
     <img src="flor.gif" alt="Flor animada">
