--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class='wrapper'>
   
-  <div class='text'> te amo mi vida, te amo a mas no poder cariño mio, te amó ❤️ </div>
+  <div class='text'> te amo mi vida ❤️ </div>
   
   <div class="gif-container">
     <img src="flor.gif" alt="Flor animada">
